02-service-and-ingress/manifests/deployment-app1.yaml
apiVersion: apps/v1
kind: Deployment


metadata: 
  name: nginx-app1
  namespace: ingress-lab
spec: 
  replicas: 1
 

  selector: 
    matchLabels:
      app: nginx-app1
  template: 
    metadata:
      labels:
        app: nginx-app1
    spec:
      containers:
      - name: nginx
        image: nginx:1.29
        ports:
        - containerPort: 80
