02-service-and-ingress/manifests/deployment-app2.yaml
apiVersion: apps/v1
kind: Deployment

metadata: 
  name: nginx-app2
  namespace: ingress-lab

spec:
  replicas: 1
  
  selector:
    matchLabels:
      app: nginx-app2

  template:
    metadata:
      labels:
        app: nginx-app2
    spec:
      containers:
      - name: nginx
        image: nginx:1.29
        ports:
        - containerPort: 80
