02-service-and-ingress/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment


metadata:
  name: nginx-deployment
  namespace: ingress-lab

spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx
  template: 
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx:1.29
        ports:
        - containerPort: 80
