02-service-and-ingress/manifests/service-app1.yaml
apiVersion: v1
kind: Service


metadata:
  name: nginx-app1-service
  namespace: ingress-lab


spec:
  type: ClusterIP


  selector:
    app: nginx-app1

  ports:
  - port: 80
    targetPort: 80
