02-service-and-ingress/manifests/service-app2.yaml
apiVersion:  v1
kind: Service


metadata:
  name: nginx-app2-service
  namespace: ingress-lab
 

spec:
  type: ClusterIP

  selector:
    app: nginx-app2


  ports:
  - port: 80
    targetPort: 80
