02-service-and-ingress/manifests/service.yaml
apiVersion: v1
kind: Service


metadata:
  name: nginx-service
  namespace: ingress-lab
spec:
  type: ClusterIP
  selector:
    app: nginx
  ports:
  - port: 80
    targetPort: 80
