02-service-and-ingress/manifests/ingress-host-routing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata: 
  name: host-routing-ingress
  namespace: ingress-lab

spec:
  ingressClassName: traefik
  rules:
  - host: app1.local
    http: 
      paths: 
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx-app1-service
            port:
              number: 80

  - host: app2.local
    http: 
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx-app2-service
            port:
              number: 80
