02-service-and-ingress/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress


metadata:
  name: nginx-ingress
  namespace: ingress-lab

spec:
  ingressClassName: traefik
  rules:
  - host: nginx.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx-service
            port:
              number: 80
